refactor(i18n): 更新组件的国际化文案
- 更新了多个组件的国际化文案，包括颜色选择器、数据网格、日期选择器等
- 优化了部分文案的表述，使其更加贴合中文习惯
- 统一了部分术语的翻译，提高了文案的一致性

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@opensearch-project/oui_zh",
+  "name": "ouizhc",
   "description": "OpenSearch UI Component Library chinese",
   "version": "1.8.1",
   "license": "Apache-2.0",
